--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,11 @@
 <div id="home">
   <div class="row flex-nowrap justify-content-between align-items-center">
     <div class="col-6 pt-1">
-      <h2 class="blog-post-title">Articles</h2>
+      <h2 class="blog-post-title">BREAKING NEWS</h2>
     </div>
     <div class="col-6 d-flex justify-content-end align-items-center">
-      <a class="btn btn-sm btn-outline-secondary text-muted" id="new_articles">SCRAPE ARTICLES</a>
-      <a class="btn btn-sm btn-outline-secondary text-muted" id="clr_articles">CLEAR ARTICLES</a>
+      <a class="btn btn-sm btn-danger text-white" id="new_articles">SCRAPE NEWS</a>
+      <a class="btn btn-sm btn-danger text-white" id="clr_articles">CLEAR NEWS</a>
     </div>
   </div>
   <hr>
@@ -13,6 +13,13 @@
   <ul id="saved_articles-list" class="list-group">
     
   </ul>
+<style>
+  body{
+    background-image: url("https://st.depositphotos.com/1231639/3727/v/950/depositphotos_37278933-stock-illustration-miami-florida-city-skyline-silhouette.jpg");
+    background-size: 25%;
+  }
+  
+</style>
 
 </div>
 </div>
