--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Miami Today Scraper</title>
+  <title>Miami News</title>
 </head>
 
 <body>
@@ -18,10 +18,10 @@
         <a class="p-2 text-muted" href="./articles">Saved Articles</a>
       </nav>
     </div>
-    <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+    <div class="jumbotron p-3 p-md-5 text-white rounded bg-danger">
       <div class="col-md-6 px-0">
-        <h1 class="display-4 font-italic">Miami Today Scraper</h1>
-        <p class="lead my-3">Your friendly local news scraper.</p>
+        <h1 class="display-4 font-italic">Is All About Miami </h1>
+        <p class="lead my-3">The Worldwide Leader in News.</p>
       </div>
     </div>
     {{{body}}}
