--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,7 +1,7 @@
 <div id="home">
   <div class="row flex-nowrap justify-content-between align-items-center">
     <div class="col-6 pt-1">
-      <h2 class="blog-post-title">My Articles</h2>
+      <h2 class="blog-post-title">My News</h2>
     </div>
   </div>
   <hr>
@@ -40,7 +40,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="commentModalLabel">Article Comments</h5>
+        <h5 class="modal-title" id="commentModalLabel">New's Comments</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
